# HoT_SkillTracker

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample.spec
app/: __init__.py  states.json  wiki_to_json.py
app/static/: h_o_t_traits.json  script.js  source.html  style.css
app/static/css/: style.css
app/static/data/: h_o_t_traits.json
app/static/js/: ability_traits.js  script.js
app/templates/: ability_traits.html  index.html
utils/: __init__.py  formatting.py  progress_bar_decorator.py
