[tool.poetry]
name = "hot-skilltracker"
version = "0.1.0"
description = ""
authors = ["Ewvyx"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
flask-wtf = "^1.2.1"
flask-login = "^0.6.3"
flask-mail = "^0.9.1"
flask-script = "^2.0.6"
flask-cors = "^4.0.0"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
