[project]
name = "HoT_SkillTracker"
version = "1.0.1"
authors = [
  { name="Ewvyx"},
]
description = "This is a skill tracker GUI for the game: Halls of Torment."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gizix/HoT_SkillTracker"
"Bug Tracker" = "https://github.com/gizix/HoT_SkillTracker/issues"

[tool.poetry]
name = "hot-skilltracker"
version = "1.0.1"
description = "This is a skill tracker GUI for the game: Halls of Torment."
authors = ["Ewvyx"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
flask-wtf = "^1.2.1"
flask-login = "^0.6.3"
flask-mail = "^0.9.1"
flask-script = "^2.0.6"
flask-cors = "^4.0.0"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
